4.1 Regression: Light Linking Influenced Light Tree remains after disabling light linking #119697

Closed
opened 2024-03-20 14:14:19 +01:00 by Alaska · 2 comments
Member

System Information
Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-03-20 11:57, hash: c250b4bd5114
Broken version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-20 07:33, hash: 3c25b079cef5
Worked: 4.0.2

Short description of error:
In Cycles when Light Linking is enabled, and the Light Tree is enabled, part of the Light Tree gets modified to try and reduce noise on the lights that are light linked.

The issue I've found is that this modified Light Tree will remain even after disabling Light Linking. Here is a video demonstrating the issue:

This issue is made obvious by the bug described in #119692. Once that bug is fixed, you will probably still be able to reproduce this, but it will just manifest as noise differences, not artifacts.

Exact steps for others to reproduce the error:

  1. Open the attached .blend file and follow the video above, or follow the written instructions below.
    Light Tree Light Linking Remains.blend
  2. Enter Cycles rendered viewport.
  3. Select the object called Light.
  4. Create a light linking collection on Light and add Ground to it.
  5. If #119692 hasn't been fixed yet, then you should see artifacts in the rendered viewport. If it has been fixed, then you will probably see a difference in noise.
  6. Remove the light linked collection from Light. Notice how the artifacts aren't gone.
  • These artifacts come from the light linking influenced light tree, but light linking is no longer in use, so these artifacts should disappear.
  1. Try changing to solid mode, then rendered mode, disabling and enabling the light tree, and notice none of these steps fix the rendering while the light tree is on.
  2. Add a object to the scene and delete it. Now the inlfuence of light linking on the light tree will be gone.
**System Information** Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken version: 4.2.0 Alpha, branch: main, commit date: 2024-03-20 11:57, hash: `c250b4bd5114` Broken version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-20 07:33, hash: `3c25b079cef5` Worked: 4.0.2 **Short description of error:** In Cycles when Light Linking is enabled, and the Light Tree is enabled, part of the Light Tree gets modified to try and reduce noise on the lights that are light linked. The issue I've found is that this modified Light Tree will remain even after disabling Light Linking. Here is a video demonstrating the issue: <video src="/attachments/2896959d-35ed-4d93-a241-b7bc2e73f593" title="Light Tree Light Linking Remains.mp4" controls></video> This issue is made obvious by the bug described in #119692. Once that bug is fixed, you will probably still be able to reproduce this, but it will just manifest as noise differences, not artifacts. **Exact steps for others to reproduce the error:** 1. Open the attached .blend file and follow the video above, or follow the written instructions below. [Light Tree Light Linking Remains.blend](/attachments/c35c782b-f367-4eb6-b5f3-e9ecdb947fc0) 2. Enter Cycles rendered viewport. 3. Select the object called `Light`. 4. Create a light linking collection on `Light` and add `Ground` to it. 5. If #119692 hasn't been fixed yet, then you should see artifacts in the rendered viewport. If it has been fixed, then you will probably see a difference in noise. 6. Remove the light linked collection from `Light`. Notice how the artifacts aren't gone. - These artifacts come from the light linking influenced light tree, but light linking is no longer in use, so these artifacts should disappear. 7. Try changing to solid mode, then rendered mode, disabling and enabling the light tree, and notice none of these steps fix the rendering while the light tree is on. 8. Add a object to the scene and delete it. Now the inlfuence of light linking on the light tree will be gone.
Alaska added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-03-20 14:14:20 +01:00
Iliya Katushenock added the
Interest
Render & Cycles
label 2024-03-20 14:16:34 +01:00
Iliya Katushenock added this to the 4.1 milestone 2024-03-20 14:16:43 +01:00
Sergey Sharybin self-assigned this 2024-03-20 14:53:23 +01:00
Author
Member

I did some more testing. The artifacts observed don't appear to be the same as #119692. But we'll see what happens once #119692 is fixed.

I did some more testing. The artifacts observed don't appear to be the same as #119692. But we'll see what happens once #119692 is fixed.

I don't consider this refresh issue a high priority bug for 4.1.

I don't consider this refresh issue a high priority bug for 4.1.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2024-03-20 16:07:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119697
No description provided.